add validation on log in and sign up file and change date formate

--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-bubble": "^1.0.2",
-    "react-redux": "^8.0.5",
+    "react-moment": "^1.1.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
     "styletron-engine-atomic": "^1.5.0",
     "styletron-react": "^6.1.0",
     "sweetalert2": "^11.4.8",
