--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^8.0.4",
     "baseui": "^10.9.2",
     "date-fns": "^2.29.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-bubble": "^1.0.2",
